@@ -10,7 +10,7 @@
   
   <p>
     <b>Comment</b><br />
-    <%= f.text_area :comment, :style => 'width:410px;height:65px;' %>
+    <%= f.text_area :description, :style => 'width:410px;height:65px;' %>
   </p>
   
   <% unless @stage.prompt_configurations.empty? %>
